# loadtest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_POLISH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  QUICKREF.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
benchmarks/: test_benchmarks.py
docs/: docker.md  index.md
docs/api/: core.md
docs/development/: architecture.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: installation.md  quickstart.md
examples/: api_load_test.py  login_flow_test.py  one_liners.py  quickstart.py  simple_api_demo.py  simple_http_load.py  tutorial.ipynb
src/loadtest/: __init__.py  __main__.py  __version__.py  config.py  core.py  errors.py  openapi.py  patterns.py  progress.py  protocols.py  runner.py  simple_api.py  wizard.py
src/loadtest/dashboard/: __init__.py  server.py
src/loadtest/dsl/: __init__.py
src/loadtest/export/: __init__.py  prometheus.py
src/loadtest/generators/: __init__.py  constant.py  ramp.py  spike.py
src/loadtest/metrics/: collector.py
src/loadtest/protocols/: __init__.py  http2.py  websocket.py
src/loadtest/scenarios/: base.py  http.py  http2.py  web.py  websocket.py
src/loadtest/simulation/: __init__.py
tests/: test_core.py  test_patterns.py
tests/fixtures/: mock_server.py
tests/test_protocols/: __init__.py
tests/test_scenarios/: test_http.py
